# ai-ranker

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  processing.py  pyproject.toml  requirements.txt  settings.py
jenkins/: docker.Jenkinsfile  tests.Jenkinsfile
src/: exceptions.py  main.py  parser.py  settings.py
src/inference/: main.py  settings.py
src/processing/: __init__.py
src/training/: main.py  models.py  settings.py
src/utils/: __init__.py  kafka.py  mlflow.py
tests/: test_inference.py  test_logger.py  test_main.py  test_parser.py  test_processing.py  test_settings.py  test_training.py  test_training_main.py  test_training_models.py  test_utils_init.py  test_utils_kafka.py  test_utils_mlflow.py
utils/: delete_inference.py  delete_ranked.py  delete_training.py  read_inference.py  read_ranked.py  read_training.py  send_inference.py  send_training.py
