[tool.poetry]
name = "ai-ranker"
version = "0.1.0"
description = ""
authors = ["Luca Giommi <luca.giommi@cnaf.infn.it>, Giovanni Savarese <giovanni.savarese@ba.infn.it>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "2.22.1"
cloudpickle = "3.1.0"
numpy = "2.1.2"
pandas = "2.2.3"
scikit-learn = "1.5.2"
scipy = "1.14.1"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
kafka-python = "2.0.2"
shap = "0.48.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# Add rules on PyFlakes(F), pycodestyle (E,W), isort (I), 
# mccabe (C90) pep8-naming (N), pydocstyle (D), pyupgrade (UP), 
# ruff specific rules (RUF),
# flake8-bugbear (B), flake8-logging-format (G), flake8-quotes (Q)
extend-select = ["B", "C90", "E", "F", "G", "I", "N", "Q", "RUF", "UP", "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
relative_files = true
source = ["src/"]
branch = true
omit = ["tests/**"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:`min_items` is deprecated:DeprecationWarning"

]